fix dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -54,7 +54,7 @@
 
 /* define design tokens (dark mode) */
 .dark {
-  --background: #222222; /*hsl(240 10% 3.9%);*/
+  --background: #333333; /*hsl(240 10% 3.9%);*/
   --foreground: hsl(0 0% 98%);
   --card: hsl(240 10% 3.9%);
   --card-foreground: hsl(0 0% 98%);
